--- a/views/admin_dashboard.ejs
+++ b/views/admin_dashboard.ejs
@@ -33,15 +33,18 @@
             </div>
             <div class="row mt-3">
                 <div class="col-4">
+                 <a href="/admin_sn"  class="text-decoration-none">
                     <div class="d-flex justify-content-between bg-primary rounded-3 p-3 gap-2 card-shadow">
                         <div class="">
-                            <h2 class=" text-white">Send  </h2>
+                            <h2 class="text-white">Send  </h2>
                             <h2 class="text-white"> Notification !</h2>  
                         </div>
                         <div class="me-2">
                             <img width="136px" height="130px " src="./assets/images/arcticons_messages.png" alt="" /> 
                         </div>
                     </div>
+                 </a> 
+
                     <div class="d-flex justify-content-between bg-primary rounded-3 p-3 gap-2 card-shadow mt-3">
                         <div class="">
                             <h2 class="mb-lg-5 text-white">Aplication For Aprovel !</h2>
