--- a/views/admin_student_data.ejs
+++ b/views/admin_student_data.ejs
@@ -135,18 +135,23 @@
                         <div class="modal-body p-4 pb-0">
                             <div class="row g-3">
                               
-                                <form action="/signup_stu_by_admin"  method="post"> 
+                                
                                 <div class="col-lg-6 col-md-6 col-12">
                                   
-
-                                    <label class="form-label mb-1">Student Name</label>
+                                    <form action="/signup_stu_by_admin"  method="POST"  enctype="multipart/form-data" > 
+                                     
+                                    
+                                        <label class="form-label mb-1">Student Name</label>
                                     <input type="text" class="form-control mb-1 border-0 bg-body"
                                         placeholder="Please Enter" name="name">
+                                        
                                 </div>
                                 <div class="col-lg-6 col-md-6 col-12">
                                     <label class="form-label mb-1">Registration Number</label>
                                     <input type="text" class="form-control mb-1 border-0 bg-body" 
                                         placeholder="Please Enter" name="reg_no">
+
+                                        
                                 </div>
                                 <div class="col-lg-6 col-md-6 col-12">
                                     <label class="form-label mb-1">Email</label>
@@ -165,43 +170,49 @@
                                         <option><%=b.bus_id%></option>
                                         <% }); %>
                                     </select>
-                                 
+                                    
                                 </div>
+
                                 <div class="col-lg-6 col-md-6 col-12">
                                     <label class="form-label mb-1">Password</label>
                                     <input type="password" class="form-control mb-1 border-0 bg-body"
                                         placeholder="Please Enter" name="password">
+
                                 </div>
                                 <div class="col-lg-6 col-md-6 col-12">
+                                  
                                     <label class="form-label text-dark mb-1">Upload Image</label>
-                                    <div class=" d-flex gap-2">
+                                    <input type="file" class="form-control" id="profileImage" name="profileImage" required>
+
+                                    <!-- <div class=" d-flex gap-2">
                                         <div class="">
-                                            <label
-                                                class="btn upload-img-container btn-file border-0 p-3 position-relative">
+                                            <label class="btn upload-img-container btn-file border-0 p-3 position-relative">
+
                                                 <div
                                                     class="uploadFile d-flex justify-content-center align-items-center ">
                                                     <img src="assets/images/upload-img.png" height="40" width="40"
                                                         id="image-preview" alt="">
                                                 </div>
-                                                <input type="file" class="d-none" id="file-input"    multiple=""
-                                                    required=""  name="profileImage">
+                                               
                                             </label>
+
                                         </div>
+                                    
                                         <div class="image-containers d-flex gap-3 flex-wrap position-relative">
                                             <div class="upload-property-image">
+                                                
                                             </div>
                                         </div>
-                                    </div>
+                                    </div> -->
                                 </div>
-
-                                <input type="submit" class="btn btn-primary"  value="Create" >
-
-                                  </form>
                             </div>
                         </div>
                         <div class="modal-footer border-0 p-4 pt-0">
+                            <input type="submit" class="btn btn-primary"  value="Create" >
+                        </form>
                             <button class="btn btn-light-light me-2" data-bs-dismiss="modal">Cancel</button>
-                            
+                           
+                      
                         </div>
                   
                     </div>
