--- a/public/Style/login_style.css
+++ b/public/Style/login_style.css
@@ -1,7 +1,10 @@
 
  body{
-   background-image: url("../src/bg.jpg");
-   justify-content: center;
+   /* background-image: url("../src/bg.jpg");
+   justify-content: center; */
+   
+    background: linear-gradient(to right, #a91cd4, #0a30d8);
+  
  }  
  
  .busImg{
@@ -22,10 +25,16 @@
    margin-top: 22%;
  }
 
+
+ .mxc0{
+  margin-left: 15%;
+}
+
  .mxc{
 
   margin-left: 20%;
 }
+
 
 .mxc1{
 
@@ -35,9 +44,49 @@
 
   margin-left: 52%;
 }
-.color-white{
+/* .color-white{
   color: white;
 }
 .contorn-w{
   width: 5px;
+}
+
+.hidden {
+  display: none;
+}
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: none;
+  justify-content: center;
+  align-items: center;
+}
+.overlay-content {
+  position: relative;
+  background: white;
+  padding: 20px;
+  border-radius: 10px;
+  max-width: 600px;
+  width: 100%;
+}
+.close-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background: none;
+  border: none;
+  font-size: 24px;
+  cursor: pointer;
+} */
+
+.bg-color{
+  background:linear-gradient(to right, #a91cd4, #0a30d8);
+}
+
+.login-bg {
+  background: linear-gradient(to right, #a91cd4, #0a30d8);
 }
