--- a/views/test.ejs
+++ b/views/test.ejs
@@ -4,14 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="Style/login_style.css">
+    <link rel="stylesheet" href="Style/panal_style.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <style>
-      .hidden {
-        display: none;
-      }
-    </style>
+  
   </head>
   <body>
     <div class="container">
@@ -21,17 +18,14 @@
 
       <div class="row">
         <div class="col-7">
-          <div class="bg-white px-5 py-3 my-5 rounded-3 h-75">'
+          <div class="bg-white px-5 py-3 my-5 rounded-3 h-75">
             <h2>Power By </h2>
             <div class="d-flex justify-content-center align-items-center">
               <img src="assets/images/logo1.png" class="border-2" width="250px" height="250px" alt="">
             </div>
             <div class="d-flex justify-content-center align-items-center">
-              <h3>Campus Weel  Comsats  </h3>
-              
+              <h3>Campus Weel Comsats</h3>
             </div>
-           
-            
           </div>
         </div>
         <div class="col-5 rounded-3 busImg">
@@ -49,7 +43,7 @@
               </div>
               <input type="password" class="mxc1 my-2 rounded-1 px-4" id="password" name="password" required placeholder="Password">
               <br>
-              <span><a href="/stu_singup" class=" mxc1 text-danger ">SignUp here</a></span>
+              <span><a href="#" id="show-signup" class="mxc1 text-danger">SignUp here</a></span>
               <input type="submit" class="mxc0 my-2 rounded-1" value="Log in">
             </form>
           </div>
@@ -104,6 +98,59 @@
       </div>
     </div>
 
+    <!-- Signup Overlay -->
+    <div class="overlay" id="signup-overlay">
+      <div class="overlay-content">
+        <button class="close-btn" id="close-signup">&times;</button>
+        <div class="text-center">
+          <img src="./assets/images/logo1.png" width="150px" height="150px" alt="">
+          <h2 class="mb-0">Create a new account</h2>
+          <p class="small">Already have an account? <span><a href="#" id="hide-signup" class="text-danger">Sign-in here</a></span></p>
+        </div>
+        <div class="row">
+          <div class="col-6">
+            <div class="mb-3">
+              <label for="" class="form-label regular small">First Name</label>
+              <input type="text" class="form-control" placeholder="Please Enter"/>
+            </div>
+          </div>
+          <div class="col-6">
+            <div class="mb-3">
+              <label for="" class="form-label regular small">Last Name</label>
+              <input type="text" class="form-control" placeholder="Please Enter"/>
+            </div>
+          </div>
+          <div class="col-6">
+            <div class="mb-3">
+              <label for="" class="form-label regular small">Username or email address</label>
+              <input type="text" class="form-control" placeholder="Please Enter"/>
+            </div>
+          </div>
+          <div class="col-6">
+            <div class="mb-3">
+              <label for="" class="form-label regular small">Phone Number</label>
+              <input type="text" class="form-control" placeholder="Please Enter"/>
+            </div>
+          </div>
+          <div class="col-6">
+            <div class="mb-3">
+              <label for="" class="form-label regular small">Password</label>
+              <input type="password" class="form-control" placeholder="Please Enter"/>
+            </div>
+          </div>
+          <div class="col-6">
+            <div class="mb-3">
+              <label for="" class="form-label regular small">Confirm Password</label>
+              <input type="password" class="form-control" placeholder="Please Enter"/>
+            </div>
+          </div>
+          <div class="d-flex justify-content-evenly align-items-center pt-5 mt-3">
+            <button class="btn btn-danger px-5 w-75 text-white bg-color">SignUp</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script>
       document.getElementById('admin-btn').addEventListener('click', function() {
         document.getElementById('stu_form').classList.add('hidden');
@@ -121,6 +168,18 @@
         document.getElementById('admin_form').classList.add('hidden');
         document.getElementById('stu_form').classList.add('hidden');
         document.getElementById('faculty_form').classList.remove('hidden');
+      });
+
+      document.getElementById('show-signup').addEventListener('click', function() {
+        document.getElementById('signup-overlay').style.display = 'flex';
+      });
+
+      document.getElementById('close-signup').addEventListener('click', function() {
+        document.getElementById('signup-overlay').style.display = 'none';
+      });
+
+      document.getElementById('hide-signup').addEventListener('click', function() {
+        document.getElementById('signup-overlay').style.display = 'none';
       });
     </script>
   </body>
