--- a/views/admin_dashboard.ejs
+++ b/views/admin_dashboard.ejs
@@ -15,12 +15,13 @@
     <div class="container-fluid p-0" id="some-menu"></div>
     <!--*** BARS END ***-->
 
+
     <div class="page-wrapper px-3 ">
 
-
+      <div>
         <div class="container-fluid  rounded-2 px-0">
 
-            <div class="d-flex justify-content-between bg-primary rounded-3 p-3 gap-2 card-shadow">
+            <div class="d-flex justify-content-between bg-color rounded-3 p-3 gap-2 card-shadow">
                 <div class="py-3">
                   
                     <p class="small text-white my-5">may 13,2024 </p>
@@ -34,7 +35,7 @@
             <div class="row mt-3">
                 <div class="col-4">
                  <a href="/admin_sn"  class="text-decoration-none">
-                    <div class="d-flex justify-content-between bg-primary rounded-3 p-3 gap-2 card-shadow">
+                    <div class="d-flex justify-content-between bg-color rounded-3 p-3 gap-2 card-shadow">
                         <div class="">
                             <h2 class="text-white">Send  </h2>
                             <h2 class="text-white"> Notification !</h2>  
@@ -45,7 +46,7 @@
                     </div>
                  </a> 
 
-                    <div class="d-flex justify-content-between bg-primary rounded-3 p-3 gap-2 card-shadow mt-3">
+                    <div class="d-flex justify-content-between bg-color rounded-3 p-3 gap-2 card-shadow mt-3">
                         <div class="">
                             <h2 class="mb-lg-5 text-white">Aplication For Aprovel !</h2>
                             
@@ -56,7 +57,7 @@
                     </div>
                 </div>
                 <div class="col-lg-8" bis_skin_checked="1">
-                    <div class="bg-primary card-Shadow rounded-2 mb-3 p-4" bis_skin_checked="1">
+                    <div class="bg-color card-Shadow rounded-2 mb-3 p-4" bis_skin_checked="1">
                         <div class="flex-between" bis_skin_checked="1">
                             <h3 class="mb-0 text-white ">Notification !</h3>
                         </div>
@@ -91,7 +92,7 @@
        
         
     </div>
-  
+      
 
     </div>
     <script src="js/jquery.js"></script>
@@ -107,7 +108,7 @@
     </script>
    
    <footer class="mxc">
-    <div class=" mtc rounded-3 p-1 gap-2 bg-primary">
+    <div class=" mtc rounded-3 p-1 gap-2 bg-color">
        <h5 class="text-white">CU BSU portal</h5>
     </div>
 </footer>
