--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -98,11 +98,7 @@
   --bs-calender-bg: #f3f3f3;
 }
 
-body {
-  background-image: url("../images/bg-imgs/body-img.png");
-  background-repeat: no-repeat;
-  
-}
+
 
 .navbar {
   --bs-navbar-active-color: #8CAFE3  !important;
@@ -1028,12 +1024,15 @@ h5 {
 
 .page-wrapper {
   padding-top: 20px;
-  padding-left: calc(83px + 1.5rem) !important;
+  padding-left: calc(103px + 2.25rem) !important;
+  padding-right: calc(63px + 1rem) !important;
+
 }
 
 @media screen and (max-width: 767.5px) {
   .page-wrapper {
     padding-left: 1rem !important;
+    
   }
 }
 .flex-center {
@@ -1121,6 +1120,44 @@ a:hover {
   margin-right: 3px;
 }
 
+body {
+  /* background-image: url("../images/bg-imgs/body-img.png");
+  background-repeat: no-repeat; */
+  /* background:linear-gradient(to right, #a91cd4, #0a30d8); */
+  /* background-color: #c4c8c9; */
+  background-color: #c4c8c9;
+}
+
+.bg-color{
+  
+  background:linear-gradient(to right, #4B2980, #0E60AC);
+  /* background-color: #0E60AC; */
+}
+
+/* .navbar:hover .navbar-icon {
+  margin-left: 62px;
+  height: 100px;
+  width: 100px;
+} */
+
+a.text-decoration-none .d-flex {
+  transition: all 0.3s ease; /* Smooth transition for padding and color change */
+}
+
+a.text-decoration-none .d-flex:hover {
+  padding: 30%;
+  /* background-color:#1f91f3;  */
+ 
+  background:linear-gradient(to right, #4383E3, #4383E3);
+}
+
+a.text-decoration-none .d-flex:hover img {
+  transform: translateX(20px); /* Move the image to the right */
+}
+
+img {
+  transition: transform 0.3s ease; /* Smooth transition for the image movement */
+}
 
 
 
