--- a/views/admin_send_notfi.ejs
+++ b/views/admin_send_notfi.ejs
@@ -17,21 +17,11 @@
 
     <div class="page-wrapper px-3 ">
         <div class="container-fluid rounded-2 px-0">
-            <!-- <div class="d-flex justify-content-between bg-primary rounded-3 p-3 gap-2 card-shadow">
-                <div class="py-3">
-                    <p class="small text-white my-5">May 9, 2024</p>
-                    <h2 class="mb-0 text-white">Welcome , Sharabeel !</h2>
-                    <p class="mb-0 text-white">Always stay updated in your Bus portal</p>
-                </div>
-                <div class="me-2">
-                    <img src="assets/images/profile.jpg" class="r-img" alt="" width="200px" height="200px" />
-                </div>
-            </div> -->
 
-            <div class="row flex-nowrap mt-3">
+            <div class="row flex-nowrap mt-5">
                 <div class="col-2">
-                    <a href="/admin_sn" class="text-decoration-none">
-                        <div class="d-flex justify-content-between bg-primary rounded-3 mt-5 py-4 card-shadow">
+                    <a href="/admin_sn" class=" text-decoration-none">
+                        <div class="d-flex justify-content-between bg-color rounded-3 mt-5 py-4 card-shadow">
                             <div class="mx-2">
                                 <h44 class="text-white">To Student</h44>
                             </div>
@@ -41,19 +31,9 @@
                         </div>
                     </a>
 
-                    <a href="/admin_sn_dc" class="text-decoration-none">
-                        <div class="d-flex justify-content-between bg-primary rounded-3 mt-2 py-4 card-shadow">
-                            <div class="mx-2">
-                                <h44 class="text-white">To Driver</h44>
-                            </div>
-                            <div class="me-2">
-                                <img width="40px" height="30px" src="assets/images/arcticons_messages.png" alt="" />
-                            </div>
-                        </div>
-                    </a>
-
+             
                     <a href="/admin_sn_fc" class="text-decoration-none">
-                        <div class="d-flex justify-content-between bg-primary rounded-3 mt-2 py-4 card-shadow">
+                        <div class="d-flex justify-content-between bg-color rounded-3 mt-2 py-4 card-shadow">
                             <div class="mx-2">
                                 <h44 class="text-white">To Facality</h44>
                             </div>
@@ -64,7 +44,7 @@
                     </a>
 
                     <a href="/admin_sn_bc" class="text-decoration-none">
-                        <div class="d-flex justify-content-between bg-primary rounded-3 mt-2 py-4 card-shadow">
+                        <div class="d-flex justify-content-between bg-color rounded-3 mt-2 py-4 card-shadow">
                             <div class="mx-2">
                                 <h44 class="text-white">On Bus</h44>
                             </div>
@@ -75,7 +55,7 @@
                     </a>
 
                     <a href="/admin_sn_rc" class="text-decoration-none">
-                        <div class="d-flex justify-content-between bg-primary rounded-3 mt-2 py-4 card-shadow">
+                        <div class="d-flex justify-content-between bg-color rounded-3 mt-2 py-4 card-shadow">
                             <div class="mx-2">
                                 <h44 class="text-white">On Route</h44>
                             </div>
@@ -85,19 +65,9 @@
                         </div>
                     </a>
 
-                    <a href="/admin_sn_gc" class="text-decoration-none">
-                        <div class="d-flex justify-content-between bg-primary rounded-3 mt-2 py-4 card-shadow">
-                            <div class="mx-2">
-                                <h44 class="text-white">General</h44>
-                            </div>
-                            <div class="me-2">
-                                <img width="40px" height="30px" src="assets/images/Frame 35.png" alt="" />
-                            </div>
-                        </div>
-                    </a>
                 </div>
                 <div class="col-6" bis_skin_checked="1">
-                    <div class="bg-primary card-Shadow rounded-2 p-1 py-4 px-4">
+                    <div class="bg-color card-Shadow rounded-2 p-1 py-4 px-4">
                         <div class="flex-between">
                             <h4 class="text-white">Select</h4>
                             <div class="container">
@@ -154,7 +124,7 @@
                 </div>
 
                 <div class="col-4" bis_skin_checked="1">
-                    <div class="bg-primary card-Shadow rounded-2 p-1 py-4 px-4" bis_skin_checked="1">
+                    <div class="bg-color card-Shadow rounded-2 p-1 py-4 px-4" bis_skin_checked="1">
                         <div class="flex-between" bis_skin_checked="1">
                             <h4 class="mb-0 text-white">Send Notification !</h4>
                         </div>
@@ -174,7 +144,7 @@
                                         </div>
 
                                         <div class="row-gap-2">
-                                            <button type="submit" class="col-4 rounded-5 mt-2" style="margin-left: 250px;">
+                                            <button type="submit" class="col-4 rounded-5 mt-2" style="margin-left: 220px;">
                                                 send
                                                 <img src="assets/images/Send.png" height="25px" width="25px" alt="">
                                             </button>
@@ -193,6 +163,7 @@
             </div>
         </div>
     </div>
+    </body>
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="assets/js/jquery-3.6.3.min.js"></script>
@@ -227,12 +198,11 @@
             selectAllCheckbox.dispatchEvent(event);
         });
     </script>
-    <footer class="mxc">
-        <div class="mtc rounded-3 p-1 gap-2 bg-primary">
-            <h5 class="text-white">CU BSU portal</h5>
+    <!-- <footer class="mxc">
+        <div class=" mtc rounded-3 p-1 gap-2 bg-color">
+           <h5 class="text-white">CU BSU portal</h5>
         </div>
-    </footer>
-
+    </footer> -->
 </body>
 
 </html>
