--- a/views/student_dashboard.ejs
+++ b/views/student_dashboard.ejs
@@ -20,7 +20,7 @@
 
         <div class="container-fluid  rounded-2 px-0">
 
-            <div class="d-flex justify-content-between bg-primary rounded-3 p-3 gap-2 card-shadow">
+            <div class="d-flex justify-content-between bg-color rounded-3 p-3 gap-2 card-shadow">
                 <div class="py-3">
                     <% let fullString = currentDate.toString(); %>
                      <% let desiredPart = fullString.substring(0, 21); %>
@@ -35,7 +35,7 @@
             </div>
             <div class="row mt-3">
                 <div class="col-4">
-                    <div class="d-flex justify-content-between bg-primary rounded-3 p-3 gap-2 card-shadow">
+                    <div class="d-flex justify-content-between bg-color rounded-3 p-3 gap-2 card-shadow">
                         <div class="">
                             <h2 class="mb-lg-5 text-white">Bus info </h2>
                             <button class="btn btn-primary bg-dark btn-blue">view</button>
@@ -44,7 +44,7 @@
                             <!-- <img width="246px" height="189px " src="./assets/images/busImage.png" alt="" /> -->
                         </div>
                     </div>
-                    <div class="d-flex justify-content-between bg-primary rounded-3 p-3 gap-2 card-shadow mt-3">
+                    <div class="d-flex justify-content-between bg-color rounded-3 p-3 gap-2 card-shadow mt-3">
                         <div class="">
                             <h2 class="mb-lg-5 text-white">Bus info </h2>
                             <button class="btn btn-primary bg-dark btn-blue w-75">view</button>
@@ -55,7 +55,7 @@
                     </div>
                 </div>
                 <div class="col-lg-8" bis_skin_checked="1">
-                    <div class="bg-primary card-Shadow rounded-2 mb-3 p-4" bis_skin_checked="1">
+                    <div class="bg-color card-Shadow rounded-2 mb-3 p-4" bis_skin_checked="1">
                         <div class="flex-between" bis_skin_checked="1">
                             <h3 class="mb-0 text-white ">Notification !</h3>
                         </div>
@@ -114,7 +114,7 @@
     </script>
    
    <footer class="mxc">
-    <div class=" mtc rounded-3 p-1 gap-2 bg-primary">
+    <div class=" mtc rounded-3 p-1 gap-2 bg-color">
        <h5 class="text-white">CU BSU portal</h5>
     </div>
 </footer>
