--- a/views/admin_dashboard.ejs
+++ b/views/admin_dashboard.ejs
@@ -29,7 +29,8 @@
                     <p class="mb-0 text-white">Always stay updated in your Bus portal</p>
                 </div>
                 <div class="me-2">
-                    <img src="assets/images/profile.jpg"  class="r-img" alt="" width="200px" height="200px" />
+                
+                    <img src="uploads/1716658625863.jpg"  class="r-img" alt="" width="200px" height="200px" />
                 </div>
             </div>
             <div class="row mt-3">
