--- a/views/student_dashboard.ejs
+++ b/views/student_dashboard.ejs
@@ -30,7 +30,8 @@
                     <p class="mb-0 text-white">Always stay updated in your Bus portal</p>
                 </div>
                 <div class="me-2">
-                    <img src="assets/images/profile.jpg"  class="r-img" alt="" width="200px" height="200px" />
+                    
+                    <img src="uploads/<%=student.profile_img %>"  class="r-img" alt="" width="200px" height="200px" />
                 </div>
             </div>
             <div class="row mt-3">
