--- a/public/navbars_stu.ejs
+++ b/public/navbars_stu.ejs
@@ -20,7 +20,7 @@
                 <ul class="list-unstyled">
                     <!-- Dashboard Div -->
                     <li class="nav-item ps-4 px-3 mb-3">
-                        <a  href="/admin_dashboard" class="btn nav-link p-2 Navigation-btn Navigation-active w-100 text-start border-0 small-active"
+                        <a class="btn nav-link p-2 Navigation-btn Navigation-active w-100 text-start border-0 small-active"
                             id="drop-icon-right1">
                             <svg class="Nav-svg" width="20" height="20">
                                 <use href="assets/images/icons/Navbar-icons/Home-icon.svg#home-icon"></use>
@@ -28,13 +28,13 @@
 
                             <span class="hide-show Navigation-title mb-0 d-none">Dashboard</span>
 
-                        
+                          
                         </a>
                     </li>
                     <!-- USERS DIV -->
 
                     <li class="nav-item ps-4 px-3 mb-3">
-                        <a  href="/add_stu_data"   class="btn nav-link p-2 Navigation-btn w-100 text-start border-0 bg-transparent"
+                        <a class="btn nav-link p-2 Navigation-btn w-100 text-start border-0 bg-transparent"
                             id="drop-icon-right1">
                             <svg class="Nav-svg" width="20" height="20">
                                 <use href="assets/images/icons/nav-user-icon.svg#users-icon"></use>
