--- a/views/student_dashboard.ejs
+++ b/views/student_dashboard.ejs
@@ -111,7 +111,7 @@
     <script src="assets/js/Toggels.js"></script>
     <script>
         
-        $("#some-menu").load("navbars.ejs");
+        $("#some-menu").load("navbars_stu.ejs");
     </script>
    
    <footer class="mxc">
