--- a/views/login.ejs
+++ b/views/login.ejs
@@ -108,7 +108,7 @@
       </div>
       <div class="row">
         <div class="col-7 rounded-3">
-          <div class="border-bottom border-white"><h1 class="color-white">Route Info</h1></div>
+          <div class="border-bottom border-white"><h1 style="color: #FFFFFF;">Route Info</h1></div>
           <div class="row overflow-auto flex-nowrap overflow-x-scroll" style="height: 300px;">
             <% route.forEach( r => { %>
               <div class="border mx-2 my-3 bg-white d-flex justify-content-center align-items-center" style="width:170px; height: 250px;">
@@ -118,7 +118,7 @@
           </div>
         </div>
         <div class="col-4 mx-3 rounded-3">
-          <div class="border-bottom border-white"><h1 class="color-white">Driver Info</h1></div>
+          <div class="border-bottom border-white"><h1 style="color: #FFFFFF;">Driver Info</h1></div>
           <div class="overflow-y-scroll" style="height: 300px;">
             <% driver.forEach(d => { %>
               <div class="d-flex mx-2 my-3 bg-white p-2">
@@ -155,46 +155,51 @@
               <h2 class="">Create a new account</h2>
               <p class="small">Already have an account? <span><a href="#" id="hide-signup" class="text-danger">Sign-in here</a></span></p>
             </div>
+            <form action="/stu_singup" method="post">
             <div class="row">
+              
               <div class="col-6">
                 <div class="mb-2">
-                  <label for="" class="form-label regular small">First Name</label>
-                  <input type="text" class="form-control" placeholder="Please Enter"/>
+                  <label for="" class="form-label regular small">Name</label>
+                  <input type="text" class="form-control"  name="name" placeholder="Please Enter"/>
                 </div>
               </div>
               <div class="col-6">
                 <div class="mb-2">
-                  <label for="" class="form-label regular small">Last Name</label>
-                  <input type="text" class="form-control" placeholder="Please Enter"/>
+                  <label for="" class="form-label regular small">Registration Number</label>
+                  <input type="text" class="form-control" name="reg_no"  placeholder="Please Enter"/>
                 </div>
               </div>
               <div class="col-6">
                 <div class="mb-2">
-                  <label for="" class="form-label regular small">Username or email address</label>
-                  <input type="text" class="form-control" placeholder="Please Enter"/>
+                  <label for="" class="form-label regular small">email address</label>
+                  <input type="text" class="form-control"  name="email" placeholder="Please Enter"/>
                 </div>
               </div>
               <div class="col-6">
                 <div class="mb-2">
                   <label for="" class="form-label regular small">Phone Number</label>
-                  <input type="number" class="form-control" placeholder="Please Enter"/>
+                  <input type="number" class="form-control" name="contact" placeholder="Please Enter"/>
                 </div>
               </div>
               <div class="col-6">
                 <div class="mb-2">
                   <label for="" class="form-label regular small">Password</label>
-                  <input type="password" class="form-control" placeholder="Please Enter"/>
+                  <input type="password" class="form-control" name="password" placeholder="Please Enter"/>
                 </div>
               </div>
               <div class="col-6">
                 <div class="mb-2">
-                  <label for="" class="form-label regular small">Confirm Password</label>
-                  <input type="password" class="form-control" placeholder="Please Enter"/>
+                  <label for="" class="form-label regular small">Upload Profile Image</label>
+                  <input type="file" class="form-control" id="filename" name="filename" />
+                  
                 </div>
               </div>
+                
               <div class="d-flex justify-content-evenly align-items-center mt-3 pt-3 ">
-                <a href="#" class="btn btn-danger px-5 w-75 text-white bg-color" type="button">SignUp</a>
+                <input class="btn btn-danger px-5 w-75 text-white bg-color"  type="submit"  value="SignUp">   
               </div>
+            </form>
             </div>
           </div>
         </div>
