--- a/views/login.ejs
+++ b/views/login.ejs
@@ -155,7 +155,7 @@
               <h2 class="">Create a new account</h2>
               <p class="small">Already have an account? <span><a href="#" id="hide-signup" class="text-danger">Sign-in here</a></span></p>
             </div>
-            <form action="/stu_singup" method="post">
+            <form action="/stu_singup" method="post" enctype="multipart/form-data">
             <div class="row">
               
               <div class="col-6">
@@ -191,7 +191,7 @@
               <div class="col-6">
                 <div class="mb-2">
                   <label for="" class="form-label regular small">Upload Profile Image</label>
-                  <input type="file" class="form-control" id="filename" name="filename" />
+                  <input type="file" class="form-control" id="profileImage" name="profileImage" />
                   
                 </div>
               </div>
