--- a/views/bus_data.ejs
+++ b/views/bus_data.ejs
@@ -57,7 +57,6 @@
                         </div>
                     </div>
                 </a>
-
                 <a href="/add_bus_data" class="text-decoration-none">
                     <div class="d-flex justify-content-between bg-primary rounded-3 mt-2 py-4 card-shadow">
                         <div class="mx-2">
@@ -80,7 +79,7 @@
                     </div>
                 </a>
 
-               
+                
             </div>
 
 
@@ -107,7 +106,7 @@
                         <svg class="PlusIcon">
                             <use href="assets/images/listing/plus.svg#plus-icon"></use>
                         </svg>
-                        Add Student
+                        Add Bus
                     </button>
                 </div>
             </div>
@@ -121,7 +120,7 @@
                 <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-lg">
                     <div class="modal-content">
                         <div class="modal-header p-4">
-                            <h5 class="modal-title" id="staticBackdropLabel">Create Student Data</h5>
+                            <h5 class="modal-title" id="staticBackdropLabel">Create Bus Data</h5>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         
@@ -134,71 +133,20 @@
                                     <form action="/signup_stu_by_admin"  method="POST"  enctype="multipart/form-data" > 
                                      
                                     
-                                        <label class="form-label mb-1">Student Name</label>
-                                    <input type="text" class="form-control mb-1 border-0 bg-body"
+                                        <label class="form-label mb-1">Bus Id</label>
+                                       <input type="text" class="form-control mb-1 border-0 bg-body"
                                         placeholder="Please Enter" name="name">
                                         
                                 </div>
                                 <div class="col-lg-6 col-md-6 col-12">
-                                    <label class="form-label mb-1">Registration Number</label>
-                                    <input type="text" class="form-control mb-1 border-0 bg-body" 
-                                        placeholder="Please Enter" name="reg_no">
-
-                                        
-                                </div>
-                                <div class="col-lg-6 col-md-6 col-12">
-                                    <label class="form-label mb-1">Email</label>
+                                    <label class="form-label mb-1">Driver Employee Id</label>
                                     <input type="text" class="form-control mb-1 border-0 bg-body"
                                         placeholder="Please Enter" name="email">
                                 </div>
                                 <div class="col-lg-6 col-md-6 col-12">
-                                    <label class="form-label mb-1">Contact</label>
+                                    <label class="form-label mb-1">Route Id</label>
                                     <input type="text" class="form-control mb-1 border-0 bg-body"
-                                        placeholder="Please Enter" name="contact">
-                                </div>
-
-                                <div class="col-lg-6 col-md-6 col-12">
-                                    <label class="form-label mb-1">BUS</label>
-                                    <select class="form-control mb-1 border-0 bg-body" name="bus_id">
-                                        <% bus.forEach( b =>{  %>
-                                        <option><%=b.bus_id%></option>
-                                        <% }); %>
-                                    </select>
-                                    
-                                </div>
-
-                                <div class="col-lg-6 col-md-6 col-12">
-                                    <label class="form-label mb-1">Password</label>
-                                    <input type="password" class="form-control mb-1 border-0 bg-body"
-                                        placeholder="Please Enter" name="password">
-
-                                </div>
-                                <div class="col-lg-6 col-md-6 col-12">
-                                  
-                                    <label class="form-label text-dark mb-1">Upload Image</label>
-                                    <input type="file" class="form-control" id="profileImage" name="profileImage" required>
-                                    
-
-                                    <!-- <div class=" d-flex gap-2">
-                                        <div class="">
-                                            <label class="btn upload-img-container btn-file border-0 p-3 position-relative">
-
-                                                <div
-                                                    class="uploadFile d-flex justify-content-center align-items-center ">
-                                                    <img src="assets/images/upload-img.png" height="40" width="40"
-                                                        id="image-preview" alt="">
-                                                </div>
-                                               
-                                            </label>
-
-                                        </div>
-                                    
-                                        <div class="image-containers d-flex gap-3 flex-wrap position-relative">
-                                            <div class="upload-property-image">
-                                                
-                                            </div>
-                                        </div>
-                                    </div> -->
+                                        placeholder="Please Enter" name="email">
                                 </div>
                             </div>
                         </div>
@@ -221,17 +169,13 @@
                     <thead class="Employees-border sticky-top bg-white" style="z-index: 1 !important">
                         <tr class="small">
                             <th scope="col" class="pb-3 ps-4 dashed-border-bottom">#</th>
-                            <th scope="col" class="pb-3 dashed-border-bottom" style="min-width: 150px">Student Name
+                            <th scope="col" class="pb-3 dashed-border-bottom" style="min-width: 150px">Bus Id
                             </th>
-                            <th scope="col" class="pb-3 dashed-border-bottom" style="min-width: 150px">Registration Number
+                            <th scope="col" class="pb-3 dashed-border-bottom" style="min-width: 150px">Driver Employee Id
                             </th>
-                            <th scope="col" class="pb-3 dashed-border-bottom" style="min-width: 150px">Contact
+                            <th scope="col" class="pb-3 dashed-border-bottom" style="min-width: 150px">Driver Name
                             </th>
-                            <th scope="col" class="pb-3 dashed-border-bottom" style="min-width: 150px">Email
-                            </th>
-                            <th scope="col" class="pb-3 dashed-border-bottom" style="min-width: 150px">BUS
-                            </th>
-                            <th scope="col" class="pb-3 dashed-border-bottom" style="min-width: 150px">Password
+                            <th scope="col" class="pb-3 dashed-border-bottom" style="min-width: 150px">Route Id
                             </th>
                             <th scope="col" class="pb-3 text-end dashed-border-bottom">Action</th>
                         </tr>
@@ -242,12 +186,10 @@
                         <tr class="mt-4 student-row" >
                            
                             <th scope="row" class="ps-4 pe-2"><%= ++a %></th>
-                            <td><%=s.name %></td>
-                            <td><%=s.reg_number %></td>
-                            <td><%=s.contact %></td>
-                            <td><%=s.email %></td>
                             <td><%=s.bus_id %></td>
-                            <td><%=s.password %></td>
+                            <td><%=s.driver_emp_id %></td>
+                            <td><%=s.driver_name%></td>
+                            <td><%=s.route_id %></td>
                             <td class="d-flex justify-content-evenly">
                                 <button
                                     class="btn btn-light-success d-flex justify-content-center align-items-center border-0 px-2"
