--- a/views/faculty_data.ejs
+++ b/views/faculty_data.ejs
@@ -80,7 +80,7 @@
                     </div>
                 </a>
 
-               
+            
             </div>
 
 
@@ -107,7 +107,7 @@
                         <svg class="PlusIcon">
                             <use href="assets/images/listing/plus.svg#plus-icon"></use>
                         </svg>
-                        Add Student
+                        Add Facality
                     </button>
                 </div>
             </div>
@@ -121,7 +121,7 @@
                 <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-lg">
                     <div class="modal-content">
                         <div class="modal-header p-4">
-                            <h5 class="modal-title" id="staticBackdropLabel">Create Student Data</h5>
+                            <h5 class="modal-title" id="staticBackdropLabel">Create Facality Data</h5>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         
@@ -134,29 +134,26 @@
                                     <form action="/signup_stu_by_admin"  method="POST"  enctype="multipart/form-data" > 
                                      
                                     
-                                        <label class="form-label mb-1">Student Name</label>
+                                        <label class="form-label mb-1">Facality Name</label>
                                     <input type="text" class="form-control mb-1 border-0 bg-body"
                                         placeholder="Please Enter" name="name">
                                         
                                 </div>
                                 <div class="col-lg-6 col-md-6 col-12">
-                                    <label class="form-label mb-1">Registration Number</label>
-                                    <input type="text" class="form-control mb-1 border-0 bg-body" 
-                                        placeholder="Please Enter" name="reg_no">
-
-                                        
-                                </div>
-                                <div class="col-lg-6 col-md-6 col-12">
-                                    <label class="form-label mb-1">Email</label>
+                                    <label class="form-label mb-1">Facality Employee Id</label>
                                     <input type="text" class="form-control mb-1 border-0 bg-body"
                                         placeholder="Please Enter" name="email">
                                 </div>
                                 <div class="col-lg-6 col-md-6 col-12">
-                                    <label class="form-label mb-1">Contact</label>
+                                    <label class="form-label mb-1">Facality Email</label>
+                                    <input type="text" class="form-control mb-1 border-0 bg-body"
+                                        placeholder="Please Enter" name="email">
+                                </div>
+                                <div class="col-lg-6 col-md-6 col-12">
+                                    <label class="form-label mb-1">Facality Contact</label>
                                     <input type="text" class="form-control mb-1 border-0 bg-body"
                                         placeholder="Please Enter" name="contact">
                                 </div>
-
                                 <div class="col-lg-6 col-md-6 col-12">
                                     <label class="form-label mb-1">BUS</label>
                                     <select class="form-control mb-1 border-0 bg-body" name="bus_id">
@@ -166,7 +163,6 @@
                                     </select>
                                     
                                 </div>
-
                                 <div class="col-lg-6 col-md-6 col-12">
                                     <label class="form-label mb-1">Password</label>
                                     <input type="password" class="form-control mb-1 border-0 bg-body"
@@ -221,13 +217,11 @@
                     <thead class="Employees-border sticky-top bg-white" style="z-index: 1 !important">
                         <tr class="small">
                             <th scope="col" class="pb-3 ps-4 dashed-border-bottom">#</th>
-                            <th scope="col" class="pb-3 dashed-border-bottom" style="min-width: 150px">Student Name
-                            </th>
-                            <th scope="col" class="pb-3 dashed-border-bottom" style="min-width: 150px">Registration Number
+                            <th scope="col" class="pb-3 dashed-border-bottom" style="min-width: 150px">Facality Name
                             </th>
                             <th scope="col" class="pb-3 dashed-border-bottom" style="min-width: 150px">Contact
                             </th>
-                            <th scope="col" class="pb-3 dashed-border-bottom" style="min-width: 150px">Email
+                            <th scope="col" class="pb-3 dashed-border-bottom" style="min-width: 150px"> Email
                             </th>
                             <th scope="col" class="pb-3 dashed-border-bottom" style="min-width: 150px">BUS
                             </th>
@@ -243,7 +237,6 @@
                            
                             <th scope="row" class="ps-4 pe-2"><%= ++a %></th>
                             <td><%=s.name %></td>
-                            <td><%=s.reg_number %></td>
                             <td><%=s.contact %></td>
                             <td><%=s.email %></td>
                             <td><%=s.bus_id %></td>
